--- a/config/database.yml
+++ b/config/database.yml
@@ -22,8 +22,4 @@ test:
   database: myapp_test
 
 production:
-  <<: *default
-  # database: storage/production.sqlite3
-  database: myapp_production
-  username: myapp
-  password: <%= ENV["MYAPP_DATABASE_PASSWORD"] %>
+  url: <%= ENV['DATABASE_URL'] %>
