--- a/config/database.yml
+++ b/config/database.yml
@@ -9,6 +9,8 @@ default: &default
   encoding: unicode
   database: myapp_development
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: <%= ENV['POSTGRES_USER'] %>
+  password: <%= ENV['POSTGRES_PASSWORD'] %>
 
 development:
   <<: *default
